--- a/Gestion_AcademicoAdministrativa_Abastos/Reclamaciones.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Reclamaciones.xaml
@@ -40,28 +40,39 @@
                         <TabItem Header="Reclamaciones">
                             <Grid>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="100*" />
+                                    <ColumnDefinition Width="5*" />
+                                    <ColumnDefinition Width="90*" />
+                                    <ColumnDefinition Width="5*" />
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
-                                    <RowDefinition Height="10*" />
                                     <RowDefinition Height="5*" />
-                                    <RowDefinition Height="25*" />
+                                    <RowDefinition Height="90*" />
                                     <RowDefinition Height="5*" />
-                                    <RowDefinition Height="25*" />
-                                    <RowDefinition Height="5*" />
-                                    <RowDefinition Height="25*" />
                                 </Grid.RowDefinitions>
-                                <Label Grid.Row="1" Content="Todas"/>
-                                <Grid Grid.Row="2" >
-
-                                </Grid>
-                                <Label Grid.Row="3" Content="En trámite"/>
-                                <Grid Grid.Row="4" >
-
-                                </Grid>
-                                <Label Grid.Row="5" Content="Tramitadas"/>
-                                <Grid Grid.Row="6" >
-
+                                <Grid Grid.Column="1" Grid.Row="1">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="100*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="5*" />
+                                        <RowDefinition Height="25*" />
+                                        <RowDefinition Height="5*" />
+                                        <RowDefinition Height="25*" />
+                                        <RowDefinition Height="5*" />
+                                        <RowDefinition Height="25*" />
+                                    </Grid.RowDefinitions>
+                                    <Label Grid.Row="0" Content="Todas"/>
+                                    <Grid Grid.Row="1" >
+                                        <DataGrid x:Name="DataGridTodas" ColumnWidth="*"/>
+                                    </Grid>
+                                    <Label Grid.Row="2" Content="En trámite"/>
+                                    <Grid Grid.Row="3" >
+                                        <DataGrid x:Name="DataGridEnTramite" ColumnWidth="*"/>
+                                    </Grid>
+                                    <Label Grid.Row="4" Content="Tramitadas"/>
+                                    <Grid Grid.Row="5" >
+                                        <DataGrid x:Name="DataGridTramitadas" ColumnWidth="*"/>
+                                    </Grid>
                                 </Grid>
                             </Grid>
                         </TabItem>
