Modify ActasDeEvaluacion View And Functionality

--- a/Gestion_AcademicoAdministrativa_Abastos/ActasDeEvaluacion.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/ActasDeEvaluacion.xaml
@@ -6,7 +6,73 @@
         xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos"
         mc:Ignorable="d"
         Title="ActasDeEvaluacion" Height="450" Width="800">
-    <Grid>
-        
+    <Grid x:Name="Container" Grid.Row="1" Background="{DynamicResource MainColorSolid}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <Grid x:Name="MainGridContent" Grid.Row="1" Background="{DynamicResource MainColorSolid}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Grid x:Name="MainPanel" Grid.Column="1" Panel.ZIndex="-2" Background="{DynamicResource BackgroundColorfulGradient}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="5*" />
+                    <ColumnDefinition Width="90*" />
+                    <ColumnDefinition Width="5*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="5*" />
+                    <RowDefinition Height="90*" />
+                    <RowDefinition Height="5*" />
+                </Grid.RowDefinitions>
+                <Grid Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="{DynamicResource MainColorSolid}">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="5*" />
+                        <ColumnDefinition Width="90*" />
+                        <ColumnDefinition Width="5*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="5*" />
+                        <RowDefinition Height="90*" />
+                        <RowDefinition Height="5*" />
+                    </Grid.RowDefinitions>
+                    <Grid HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="1" Panel.ZIndex="-1">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="15*" />
+                            <RowDefinition Height="25*" />
+                            <RowDefinition Height="5*" />
+                            <RowDefinition Height="65*" />
+                            <RowDefinition Height="5*" />
+                            <RowDefinition Height="15*" />
+                            <RowDefinition Height="5*" />
+                        </Grid.RowDefinitions>
+                        <Grid Grid.Row="0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="50*" />
+                                <ColumnDefinition Width="50*" />
+                            </Grid.ColumnDefinitions>
+                            <Label Grid.Column="0" Content="Acta de Evaluación para el curso: " HorizontalAlignment="Right"/>
+                            <Label Grid.Column="2" x:Name="LabelCurso" />
+                        </Grid>
+                        <Grid Grid.Row="1">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="35*" />
+                                <RowDefinition Height="65*" />
+                            </Grid.RowDefinitions>
+                            <Label Grid.Row="0" Content="Temas"/>
+                            <TextBox x:Name="TxtTemas" Grid.Row="1" TextWrapping="Wrap" AcceptsReturn="True"/>
+                        </Grid>
+                        <Grid Grid.Row="3">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="100*" />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="35*" />
+                                <RowDefinition Height="65*" />
+                            </Grid.RowDefinitions>
+                            <Label Grid.Row="0" Content="Contenido"/>
+                            <TextBox Name="TxtContenido" Grid.Row="1" TextWrapping="Wrap" AcceptsReturn="True"/>
+                        </Grid>
+                        <Button x:Name="BtnChange" Content="Añadir Acta de Evaluación"
+                                Grid.Row="5"/>
+                    </Grid>
+                </Grid>
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
+
