--- a/Gestion_AcademicoAdministrativa_Abastos/Reclamaciones.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Reclamaciones.xaml
@@ -54,24 +54,23 @@
                                         <ColumnDefinition Width="100*" />
                                     </Grid.ColumnDefinitions>
                                     <Grid.RowDefinitions>
-                                        <RowDefinition Height="5*" />
-                                        <RowDefinition Height="25*" />
-                                        <RowDefinition Height="5*" />
-                                        <RowDefinition Height="25*" />
-                                        <RowDefinition Height="5*" />
-                                        <RowDefinition Height="25*" />
+                                        <RowDefinition Height="15*" />
+                                        <RowDefinition Height="85*" />
                                     </Grid.RowDefinitions>
-                                    <Label Grid.Row="0" Content="Todas"/>
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="30*" />
+                                            <ColumnDefinition Width="5*" />
+                                            <ColumnDefinition Width="30*" />
+                                            <ColumnDefinition Width="5*" />
+                                            <ColumnDefinition Width="30*" />
+                                        </Grid.ColumnDefinitions>
+                                        <CheckBox x:Name="ChkTodas" Grid.Column="0" Content="Todas" Click="CheckBox_Click" IsChecked="True"/>
+                                        <CheckBox x:Name="ChkEnTramite" Grid.Column="2" Content="En Tramite" Click="CheckBox_Click"/>
+                                        <CheckBox x:Name="ChkTramitadas" Grid.Column="4" Content="Tramitadas" Click="CheckBox_Click"/>
+                                    </Grid>
                                     <Grid Grid.Row="1" >
-                                        <DataGrid x:Name="DataGridTodas" ColumnWidth="*" AutoGenerateColumns="True"/>
-                                    </Grid>
-                                    <Label Grid.Row="2" Content="En trámite"/>
-                                    <Grid Grid.Row="3" >
-                                        <DataGrid x:Name="DataGridEnTramite" ColumnWidth="*" AutoGenerateColumns="True"/>
-                                    </Grid>
-                                    <Label Grid.Row="4" Content="Tramitadas"/>
-                                    <Grid Grid.Row="5" >
-                                        <DataGrid x:Name="DataGridTramitadas" ColumnWidth="*" AutoGenerateColumns="True"/>
+                                        <DataGrid x:Name="MainDataGrid" ColumnWidth="*" AutoGenerateColumns="True"/>
                                     </Grid>
                                 </Grid>
                             </Grid>
